# hyprlauncher

./: Cargo.toml  configuration.md  readme.md
.github/: release.yml
src/: app.rs  config.rs  launcher.rs  main.rs  search.rs  ui.rs
