[package]
name = "hyprlauncher"
version = "0.1.6"
authors = ["Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for launching applications, written in blazingly fast Rust!"
repository = "https://github.com/hyprutils/hyprlauncher.git"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "launcher",
]
categories = ["gui"]
edition = "2021"

[dependencies]
gtk4 = "0.9.2"
gtk4-layer-shell = "0.4.0"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
dirs = "5.0"
tokio = { version = "1.41", features = ["full", "rt-multi-thread"] }
rayon = "1.8"
shellexpand = "3.1"
ctrlc = "3.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
